--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -85,6 +85,10 @@ footer {
     p {
       font-family: cursive;
       text-align: center;
+
+      a {
+        text-decoration: underline;
+      }
     }
   }
 }
